# mastic

./: .ocamlformat  LICENSE  README.md  dune  dune-project  mastic.opam
.github/workflows/: ci.yml
src/: dune  er_ast.mli  error.ml  error.mli  errorList.ml  errorList.mli  errorResilientParser.ml  errorResilientParser.mli  errorToken.ml  errorToken.mli
test/: ast.ml  calc.ml  cover1.t  cover2.t  cover3.t  cover4.t  dune  lexer.mll  main.ml  parser.mly  test1.t  test2.t  test3.t
