(lang dune 3.18)
(name mastic)
(using menhir 2.0)
(source (github gares/mastic))
(license MIT)
(authors "Enrico Tassi")
(maintainers "Enrico.Tassi@inria.fr")
(maintenance_intent "(latest)")
(package
  (name mastic)
  (synopsis "Make menhir-based parser error resilient")
  (description "This library turns menhir based parsers into error resilient ones")
  (depends (menhirLib (<> 20250912)))
  )

(cram enable)
(generate_opam_files) 